<resources>
    <string name="app_name">Phincon Attendance</string>
    <string name="welcome_to_login">Welcome to Login</string>
    <string name="desc_login"><![CDATA[Please fill Username & Password to login your app account]]></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hint_password">******</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="login_now">Login Now</string>
    <string name="dont_have_account">Don\'t Have Account?</string>
    <string name="register">Register</string>
    <string name="please">please</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="desc_regis"><![CDATA[Please fill Fullname, No. KTP, Ship & Password to register your app]]></string>
    <string name="already_have_account">Already Have Account</string>
    <string name="fullname">Fullname</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="hint_fullname">Employee Fullname</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_attendance">Your Attendance</string>
    <string name="hour">17.00</string>
    <string name="date">29 Januari 2022</string>
    <string name="location">Location</string>
    <string name="phincon">PT. Phincon</string>
    <string name="desc_list_phincon">Office. 88 @Kasablanka Office Tower 18th Floor</string>
    <string name="telkomsel">Telkomsel Smart Office</string>
    <string name="desc_list_telkomsel">Jl. Jend. Gatot Subroto Kav. 52. Jakarta Selatan</string>
    <string name="desc_list_rumah">Jakarta</string>
    <string name="rumah">Rumah</string>
    <string name="logs">Logs</string>
    <string name="nama_profile">NANANG SUPRIATNA</string>
    <string name="desc_profile">PROGRAMMER</string>
    <string name="general">GENERAL</string>
    <string name="no_karyawan">No. Karyawan</string>
    <string name="nik">NIK-0909090909</string>
    <string name="alamat">Alamat</string>
    <string name="desc_alamat">Jakarta Selatan</string>
    <string name="change_password">Change Password</string>
    <string name="idcard">id card</string>
    <string name="hint_idcard">Id Card Number</string>
    <string name="hint_address">Address</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="desc_forgot_password"><![CDATA[Please fill Username, Password & New Password to reset your account]]></string>
    <string name="reset_password">Reset Password</string>
    <string name="desc_view_pager">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="title_view_pager">Digital Absensi</string>
    <string name="signup">Sign Up</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="position">Position</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="desc_edit_profile"><![CDATA[Please fill Fullname, Address and Position to update your app]]></string>
    <string name="hourr">Hour:</string>
</resources>