<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bilu"
    tools:context=".view.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_your_account"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/desc_regis"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_activity"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="@color/abu"
                        android:textSize="14sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/username">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtUsernameRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/abu"
                            android:inputType="number"
                            android:maxLength="14"
                            android:backgroundTint="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fullname"
                        android:textColor="@color/abu"
                        android:textSize="14sp"
                        android:layout_marginTop="20dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_fullname">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtFullnameRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/abu"
                            android:backgroundTint="@color/white"
                            android:maxLength="50"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/abu"
                        android:textSize="14sp"
                        android:layout_marginTop="20dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:passwordToggleEnabled="true"
                        android:hint="@string/hint_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPasswordRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_password"
                        android:textColor="@color/abu"
                        android:textSize="14sp"
                        android:layout_marginTop="20dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:passwordToggleEnabled="true"
                        android:hint="@string/hint_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtRepeatPasswordRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/idcard"
                        android:textColor="@color/abu"
                        android:textSize="14sp"
                        android:layout_marginTop="20dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_idcard">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtIdCardRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="16"
                            android:backgroundTint="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_address"
                        android:textColor="@color/abu"
                        android:textSize="14sp"
                        android:layout_marginTop="20dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtAddressRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="100"
                            android:inputType="text"
                            android:backgroundTint="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:id="@+id/btnDaftar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="18dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:backgroundTint="@color/kuning"
                        android:textColor="@color/text"
                        android:text="@string/register" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/already_have_account"
                            android:textColor="@color/abu"
                            android:textSize="12sp"
                            android:gravity="center"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/please"
                            android:textColor="@color/abu"
                            android:textSize="12sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/bilu"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>